--- a/bkp1/projeto construtora/index.html
+++ b/bkp1/projeto construtora/index.html
@@ -15,7 +15,7 @@
     </head>
         <body data-spy="scroll" data-target=".menu-navegação" data-offset="80">
       <!-- Menu da Aplicação -->
-         <nav class="navbar navbar-default navbar-fixed-top">
+         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="containerfluid topo">
               <div class="navbar-header">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu-navegacao">
@@ -297,9 +297,9 @@
                       </div>
                  <div class="col-sm-2">
                      <h5>Fale Conosco:</h5>
-                     <p>Telefone:(xx)xxxx-xxxx</p>
-                    <p>Whatsapp:(xx)xxxxx-xxxx</p>
-                    <p>email:texto@cartezy.com</p>
+                     <p><i class = "glyphicon glyphicon-phone-alt"> Telefone:(xx)xxxx-xxxx</i></p>
+                    <p><i class =  "glyphicon glyphicon-phone"> Whatsapp:(xx)xxxxx-xxxx</i></p>
+                    <p><i class = "glyphicon glyphicon-envelope"> email:texto@cartezy.com</i></p>
                        </div>        
                 <div class="col-sm-5 text-right">
                     <img src="imgs/test_logo.png" width="70" height="60">
